--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
         python -m unittest -v calculator_unittest.py > unittests${{ github.run_number }}.txt
     - name: Commit files
       run: |
-        git config --local user.email "armangrig.ag@gmail.com"
-        git config --local user.name "Arman"
+        git config --local user.email "git@github.com"
+        git config --local user.name "Armangrig"
         git add Pytests${{ github.run_number }}.txt unittest_results.txt
         git commit -m "Tests ${{ github.run_number }}.txt"
         git push
