--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
 name: Test python
-
+permissions: write-all
 on:
   workflow_dispatch:
 
-permissions:
-  contents: write
-  actions: write
-  checks: write
+#permissions:
+#  contents: write
+#  actions: write
+#  checks: write
 
 jobs:
   tests:
@@ -19,7 +19,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9"
+        python-version: "3.10"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -35,7 +35,7 @@ jobs:
       run: |
         git config --local user.email "git@github.com"
         git config --local user.name "Armangrig"
-        git add Pytests${{ github.run_number }}.txt unittest_results.txt
+        git add Pytests${{ github.run_number }}.txt unittests${{ github.run_number }}.txt #unittest_results.txt
         git commit -m "Tests ${{ github.run_number }}.txt"
         git push
     - name: Push changes
